# serializer version: 1
# name: test_entities[climate.mock_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'fan_modes': list([
        'auto',
        'quiet',
        'low',
        'medium',
        'high',
      ]),
      'hvac_modes': list([
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.OFF: 'off'>,
      ]),
      'max_temp': 30.0,
      'min_temp': 18.0,
      'preset_modes': list([
        'eco',
        'comfort',
        'boost',
      ]),
      'swing_horizontal_modes': list([
        'off',
        'Swing',
      ]),
      'swing_modes': list([
        'off',
        'Swing',
      ]),
      'target_temp_step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.mock_device',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:snowflake',
    'original_name': None,
    'platform': 'intesishome',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 953>,
    'translation_key': None,
    'unique_id': '12345',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[climate.mock_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 24.0,
      'fan_mode': 'quiet',
      'fan_modes': list([
        'auto',
        'quiet',
        'low',
        'medium',
        'high',
      ]),
      'friendly_name': 'MOCK DEVICE',
      'hvac_modes': list([
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.OFF: 'off'>,
      ]),
      'icon': 'mdi:snowflake',
      'max_temp': 30.0,
      'min_temp': 18.0,
      'outdoor_temp': 26.0,
      'preset_mode': 'eco',
      'preset_modes': list([
        'eco',
        'comfort',
        'boost',
      ]),
      'supported_features': <ClimateEntityFeature: 953>,
      'swing_horizontal_mode': 'off',
      'swing_horizontal_modes': list([
        'off',
        'Swing',
      ]),
      'swing_mode': 'off',
      'swing_modes': list([
        'off',
        'Swing',
      ]),
      'target_temp_step': 1.0,
      'temperature': 21.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.mock_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
